welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:10: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
} avance(5);
  ^